仿天猫抽奖的小程序

--- a/app.wxss
+++ b/app.wxss
@@ -1,4 +1,5 @@
 /**app.wxss**/
+/**
 .container {
   height: 100%;
   display: flex;
@@ -8,3 +9,70 @@
   padding: 200rpx 0;
   box-sizing: border-box;
 } 
+**/
+
+.container-out{
+  width:650rpx;
+  height:600rpx;
+  background:#b136b9;
+  margin:100rpx auto;
+  border-radius:40rpx;
+  box-shadow:0 10px 0 #871a8e;
+  position: relative;
+}
+
+.circle{
+  display:block;
+  position:absolute;
+  border-radius: 50%;
+  width:20rpx;
+  height:20rpx;
+}
+.container-in{
+  width:580rpx;
+  height:530rpx;
+  background:#871a8e;
+  border-radius:40rpx;
+  position:absolute;
+  left:0;
+  right:0;
+  top:0;
+  bottom:0;
+  margin:auto;
+}
+.content-out {
+  position: absolute;
+  height: 150rpx;
+  width: 166.6666rpx;
+  background-color: #f5f0fc;
+  border-radius: 15rpx;
+  box-shadow: 0 5px 0 #d87fde;
+}
+.award-image {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  height: 140rpx;
+  width: 130rpx;
+}
+.start-btn {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  border-radius: 15rpx;
+  height: 150rpx;
+  width: 166.6666rpx;
+  background-color: #ffe400;
+  box-shadow: 0 5px 0 #e7930a;
+  color: #f6251e;
+  text-align: center;
+  font-size:45rpx;
+  font-weight: bolder;
+  line-height: 150rpx;
+}
