--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,4 +1,5 @@
 <!--index.wxml-->
+<!--
 <view class="container">
   <view class="userinfo">
     <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
@@ -10,4 +11,17 @@
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
   </view>
+</view>
+-->
+
+<view class="container-out">
+  <view class="circle" wx:for="{{circleList}}" style="top:{{item.topCircle}}rpx;left:{{item.leftCircle}}rpx;background-color:{{index%2 == 0?colorCircleFirst:colorCircleSecond}};">
+  </view>
+  <view class='container-in'>
+    <view class='content-out' wx:for="{{awardList}}" style="top:{{item.topAward}}rpx;left:{{item.leftAward}}rpx;background-color:{{(index==indexSelect)?colorAwardSelect:colorAwardDefault}};">
+      <image class="award-image" src="{{item.imageAward}}"></image>
+    </view>
+    <view class="start-btn" bindtap='startGame' style="background-color:{{isRunning ? '#e7930a' : '#ffe400'}}">START</view>
+  </view>
+
 </view>
